[project]
name = "vless-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aio-pika==9.5.5",
    "aiogram==3.17.0",
    "aiohttp==3.11.11",
    "alembic==1.14.1",
    "apscheduler==3.11.0",
    "asyncpg==0.30.0",
    "fastapi==0.115.11",
    "faststream==0.5.35",
    "loguru==0.7.3",
    "pydantic-settings==2.7.1",
    "python-decouple==3.8",
    "redis==5.2.1",
    "requests==2.32.3",
    "sqlalchemy==2.0.37",
    "sqlalchemy-utils==0.41.2",
    "uvicorn==0.34.0",
]
